[Fix] Complete the pdf layout express and reflect the change of 2nd design-highmountain-2024/11/27 12:19

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     -->
   <title>DNA報告書半自動生成システム</title>
   <meta name="description"
-    content="Get a customizable and easily-themed admin dashboard template using Daisy UI and React js. Boost your productivity with pre-configured redux toolkit and other libraries.">
+    content="本システムは、顧客の遺伝子検査データをCSV形式で受け取り、既存のデザインテンプレートに基づいて検査レポートの可変部分を自動的に埋め、PDF形式でレポートを生成することを目的としています。">
 </head>
 
 <body>
