--- a/public/index.html
+++ b/public/index.html
@@ -28,9 +28,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>DNA報告書半自動生成システム</title>
+  <title>Semi-automatic DNA report generation system</title>
   <meta name="description"
-    content="本システムは、顧客の遺伝子検査データをCSV形式で受け取り、既存のデザインテンプレートに基づいて検査レポートの可変部分を自動的に埋め、PDF形式でレポートを生成することを目的としています。">
+    content="This system is intended to receive customer genetic test data in CSV format, automatically fill in the variable parts of the test report based on existing design templates, and generate the report in PDF format.">
 </head>
 
 <body>
