[chore] change the version2.0 name-highmountain430-2024/12/20 10:44

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>DNA報告書半自動生成システム</title>
+  <title><title>DNA報告書半自動生成システム(v2.0)</title></title>
   <meta name="description"
     content="本システムは、顧客の遺伝子検査データをCSV形式で受け取り、既存のデザインテンプレートに基づいて検査レポートの可変部分を自動的に埋め、PDF形式でレポートを生成することを目的としています。">
 </head>
